--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -113,8 +113,8 @@ const stack = [
       <!-- About Section -->
       <section>
         <article>
-          <p>I am not a <b><i>software engineer</i></b>, <b><i>not a ui/ux designer</i></b>, <b><i>not a product planner</i></b>, <b><i>not a mentor</i></b>, <b><i>not a student</i></b>, but a <b><i>minimalist</i></b>, <b><i>an optimist</i></b>, <b><i>investment enthusiast</i></b> and <b><i>regular connoisseur</i></b>.</p>
-          <p>I love to build although sometimes break things in the process. I am motivated by challenging projects with self-guided research and dynamic problem solving. My true passion is crafting creative designs with unique takes on color, typography and shapes.</p>
+          <p>I’m not a <b><i>software engineer</i></b>, <b><i>UI/UX designer</i></b>, <b><i>product planner</i></b>, <b><i>mentor</i></b>, or <b><i>student</i></b>. I’m a <b><i>minimalist</i></b>, an <b><i>optimist</i></b>, an <b><i>investment enthusiast</i></b>, and a <b><i>regular connoisseur</i></b>—someone who enjoys simple things done well.</p>
+          <p>I love building things. I thrive on challenges that let me learn by doing and solving problems as best as I can, and improving it.</p>
         </article>
       </section>
 
