--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -18,7 +18,7 @@ const { title, description, image = "/open-graph.jpg" } = Astro.props
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <meta name="generator" content={Astro.generator} />
 
-<link rel="preload" href="/fonts/Geist[wght].woff2" as="font" type="font/woff2" crossorigin>
+
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
@@ -48,10 +48,17 @@ const { title, description, image = "/open-graph.jpg" } = Astro.props
 <!-- RSS Feed -->
 <link rel="alternate" type="application/rss+xml" title={title} href={`${Astro.site}rss.xml`}/>
 
+<!-- Preload Critical Fonts -->
+<link rel="preload" href="/fonts/Geist-Regular.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="/fonts/Geist-Medium.woff2" as="font" type="font/woff2" crossorigin>
+
+<!-- DNS Prefetch for External Resources -->
+<link rel="dns-prefetch" href="//fonts.googleapis.com">
+
 <!-- Global Scripts -->
 <script is:inline src="/js/theme.js"></script>
 <script is:inline src="/js/scroll.js"></script>
-<script is:inline src="/js/animate.js"></script>
+<script defer src="/js/animate.js"></script>
 
 <!-- <ViewTransitions  /> -->
 
