--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -113,8 +113,8 @@ const stack = [
       <!-- About Section -->
       <section>
         <article>
-          <p>I’m not a <b><i>software engineer</i></b>, <b><i>UI/UX designer</i></b>, <b><i>product planner</i></b>, <b><i>mentor</i></b>, or <b><i>student</i></b>. I’m a <b><i>minimalist</i></b>, an <b><i>optimist</i></b>, an <b><i>investment enthusiast</i></b>, and a <b><i>regular connoisseur</i></b>—someone who enjoys simple things done well.</p>
-          <p>I love building things. I thrive on challenges that let me learn by doing and solving problems as best as I can, and improving it.</p>
+          <p>I’m just a regular person —someone who enjoys simple things done well.</p>
+          <p>I enjoy building things. I thrive on challenges that let me learn by doing and solving problems.</p>
         </article>
       </section>
 
