revamp homepage, improve blogpost summaries

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ import Container from "@components/Container.astro"
 <footer style="background-color: rgb(var(--background));">
   <div class="animate">
     <section class="py-5">
-      <Container size="md">
+      <!-- <Container size="md">
         <div class="flex items-center justify-center sm:justify-end">
           <button id="back-to-top" aria-label="Back to top of page" 
             style="
@@ -30,7 +30,7 @@ import Container from "@components/Container.astro"
             Back to top
           </button>
         </div>
-      </Container>
+      </Container> -->
     </section>
 
     <section class="py-5 border-t border-black/5 dark:border-purple-800/30" style="backdrop-filter: blur(8px);">
